Fix #23 - Add login endpoints
